...

    <string name="congratulations_first_intro">Nice job! If you\'re already a probability expert, feel free to jump back to the main menu and try some difficult questions.</string>
    <string name="congratulations_first_0">You just rocked your first easy peasy puzzle!</string>
    <string name="congratulations_first_1">Welcome to the big leagues: you just solved your first serious puzzle!</string>
    <string name="congratulations_first_2">Slow down there, cowboy &#8212; that\'s a challenging puzzle you just solved!</string>

    <string name="button_intro">Intro</string>
    <string name="button_level_0">Easy Peasy</string>
    <string name="button_level_1">Getting Serious</string>
    <string name="button_level_2">Outrageous</string>
    <string name="button_hint">Need a hint?</string>
    <string name="button_gemini_hint">Talk to Gemini</string>
    <string name="puzzle_copied_to_clipboard">Puzzle copied to clipboard.</string>
    <string name="gemini_not_installed">Gemini app not installed. Opening Play Store.</string>

    <string-array name="levelDescriptions">
        <item>Level: easy peasy &#8212; you\'re just warming up.</item>
        <item>Level: getting serious &#8212; you may need a pen and paper.</item>
        <item>Level: outrageous &#8212; clicking that third button was a bold move.</item>
    </string-array>

    <string name="puzzle">Puzzle %d</string>
    <string name="approximate_result">≈ %s</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="stay_here_button">Stay Here</string>
    <string name="button_back_to_puzzle">Back to Puzzle</string>
    <string name="next_puzzle_button">Next Puzzle</string>
    <string name="okay_button">Okay</string>
...
